--- a/style.css
+++ b/style.css
@@ -11,17 +11,11 @@ body {
 #addModule {
     background: green;
     color: white;
-    margin-right: 30px;
-    margin-left: 30px;
+    margin-left: 20px;
 }
 
 label, select, input, button {
     font-size: 1.5rem;
-    margin: 5px;
-}
-
-label {
-    margin-left: 30px;
 }
 
 #container {
@@ -29,4 +23,50 @@ label {
     border-radius: 25px;
     width: fit-content;
     padding: 25px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    row-gap: 25px;
+    margin: 25px;
+}
+
+@media only screen and (max-width: 600px) {
+    #container {
+        padding: 10px;
+    }
+}
+
+#container > div {
+    margin-right: 15px;
+}
+
+p {
+    border-style: solid;
+    border-radius: 25px;
+    width: fit-content;
+    padding: 25px;
+    cursor: pointer;
+    font-size: 1.5rem;
+    margin: 5px;
+}
+
+#modulesContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+button {
+    border-radius: 25px;
+}
+
+.blue {
+    color: slateblue;
+}
+
+span {
+    padding: 10px;
 }
